<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.tanyayuferova.franklin.ui.InfoActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/info_background">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_franklin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginStart="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginTop="@dimen/activity_info_content_vertical_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_franklin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/franklin" />


            <TextView
                android:id="@+id/tv_info_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginStart="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginTop="@dimen/activity_info_content_vertical_margin"
                android:text="@string/info_description_1"
                android:textSize="@dimen/activity_info_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_franklin" />

            <ImageView
                android:id="@+id/iv_example"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginStart="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginTop="@dimen/activity_info_content_vertical_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_example"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_1"
                app:srcCompat="@drawable/table_example" />

            <TextView
                android:id="@+id/tv_info_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginStart="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginTop="@dimen/activity_info_content_vertical_margin"
                android:text="@string/info_description_2"
                android:textSize="@dimen/activity_info_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_example" />

            <TextView
                android:id="@+id/tv_info_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginStart="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginTop="@dimen/activity_info_content_vertical_margin"
                android:paddingBottom="@dimen/activity_info_content_vertical_margin"
                android:text="@string/info_description_3"
                android:textSize="@dimen/activity_info_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_2" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="@dimen/activity_info_close_btn_size"
        android:layout_height="@dimen/activity_info_close_btn_size"
        android:layout_gravity="end"
        android:layout_margin="@dimen/activity_info_border_width"
        android:contentDescription="@string/image_close"
        android:onClick="onClickCloseBtn"
        app:srcCompat="@drawable/ic_close" />

</android.support.design.widget.CoordinatorLayout>
