<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/info_background">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_franklin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginStart="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginTop="@dimen/activity_info_content_vertical_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_franklin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/franklin" />


            <TextView
                android:id="@+id/tv_info_1"
                style="@style/Body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginStart="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginTop="@dimen/activity_info_content_vertical_margin"
                android:text="@string/info_description_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_franklin" />

            <ImageView
                android:id="@+id/iv_example"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginStart="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginTop="@dimen/activity_info_content_vertical_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_example"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_1"
                app:srcCompat="@drawable/table_example" />

            <TextView
                android:id="@+id/tv_info_2"
                style="@style/Body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginStart="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginTop="@dimen/activity_info_content_vertical_margin"
                android:text="@string/info_description_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_example" />

            <TextView
                android:id="@+id/tv_info_3"
                style="@style/Body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginStart="@dimen/activity_info_content_horizontal_margin"
                android:layout_marginTop="@dimen/activity_info_content_vertical_margin"
                android:paddingBottom="@dimen/activity_info_content_vertical_margin"
                android:text="@string/info_description_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_2" />

            <Button
                android:id="@+id/close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@android:string/ok"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_info_3" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
