<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/virtue_item_selector"
    android:clickable="true"
    android:focusable="true"
    android:longClickable="true"
    android:paddingBottom="@dimen/spacing_m"
    android:paddingLeft="@dimen/spacing_h"
    android:paddingRight="@dimen/spacing_h"
    android:paddingTop="@dimen/spacing_m">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/icon_size_m"
        android:layout_height="@dimen/icon_size_m"
        android:layout_marginEnd="@dimen/spacing_h"
        android:layout_marginRight="@dimen/spacing_h"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:tint="?colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/cha_icon" />

    <TextView
        android:id="@+id/name"
        style="@style/Subhead"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/dots"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/mod_name" />

    <TextView
        android:id="@+id/description"
        style="@style/Caption"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:text="@string/mod_desc" />

    <TextView
        android:id="@+id/dots"
        style="@style/Mark"
        android:layout_width="@dimen/icon_size_h"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="@dimen/spacing_h"
        android:layout_marginStart="@dimen/spacing_h"
        android:maxLines="1"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/dot" />

</androidx.constraintlayout.widget.ConstraintLayout>
