<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/action_settings" />

    <Space
        android:layout_width="0dp"
        android:layout_height="@dimen/spacing_m" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notificationsSwitch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_size_single_line"
        android:background="@drawable/selectable_row_background"
        android:paddingLeft="@dimen/spacing_h"
        android:paddingRight="@dimen/spacing_h"
        android:text="@string/pref_notifications_label"
        android:textAppearance="@style/Subhead" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/spacing_h"
        android:layout_marginRight="@dimen/spacing_h"
        android:background="@color/divider" />

    <LinearLayout
        android:id="@+id/notificationTimeBlock"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_size_double_line"
        android:background="@drawable/selectable_row_background"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/spacing_h"
        android:paddingRight="@dimen/spacing_h">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/pref_time_label"
            android:textAppearance="@style/Subhead" />

        <TextView
            android:id="@+id/notificationTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/Caption"
            tools:text="20:00" />

    </LinearLayout>

    <View
        android:id="@+id/dividerTime"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/spacing_h"
        android:layout_marginRight="@dimen/spacing_h"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/aboutPlan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_size_single_line"
        android:background="@drawable/selectable_row_background"
        android:clickable="true"
        android:ellipsize="end"
        android:focusable="true"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingLeft="@dimen/spacing_h"
        android:paddingRight="@dimen/spacing_h"
        android:text="@string/about_perfection_plan"
        android:textAppearance="@style/Subhead" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/spacing_h"
        android:layout_marginRight="@dimen/spacing_h"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/aboutApp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_size_single_line"
        android:background="@drawable/selectable_row_background"
        android:clickable="true"
        android:ellipsize="end"
        android:focusable="true"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingLeft="@dimen/spacing_h"
        android:paddingRight="@dimen/spacing_h"
        android:text="@string/about_this_app"
        android:textAppearance="@style/Subhead" />

</LinearLayout>