<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ViewSwitcher
        android:id="@+id/view_switcher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_franklin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_info_content_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_info_content_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_info_content_vertical_margin"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_franklin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/franklin" />

                <TextView
                    android:id="@+id/tv_info_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="@dimen/activity_info_content_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_info_content_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_info_content_vertical_margin"
                    android:background="@drawable/info_background"
                    android:padding="@dimen/spacing_h"
                    android:text="@string/info_description_1"
                    android:textAppearance="@style/Subhead"
                    app:layout_constraintEnd_toEndOf="@id/iv_franklin"
                    app:layout_constraintStart_toStartOf="@id/iv_franklin"
                    app:layout_constraintTop_toBottomOf="@id/iv_franklin" />

                <Button
                    android:id="@+id/skip_btn"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_skip"
                    android:textColor="@color/text_primary_inverse"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_info_1" />

                <Button
                    android:id="@+id/next_btn"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/action_next"
                    android:textColor="@color/text_primary_inverse"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_info_1" />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_example"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_info_content_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_info_content_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_info_content_vertical_margin"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_example"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/table_example" />

                <TextView
                    android:id="@+id/tv_info_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_info_content_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_info_content_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_info_content_vertical_margin"
                    android:background="@drawable/info_background"
                    android:padding="@dimen/spacing_h"
                    android:text='@{@string/info_description_2 + "\n\n" + @string/info_description_3}'
                    android:textAppearance="@style/Subhead"
                    app:layout_constraintEnd_toEndOf="@id/iv_example"
                    app:layout_constraintStart_toStartOf="@id/iv_example"
                    app:layout_constraintTop_toBottomOf="@id/iv_example" />

                <Button
                    android:id="@+id/exit_btn"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@android:string/ok"
                    android:textColor="@color/text_primary_inverse"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_info_2" />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>
    </ViewSwitcher>
</layout>